@@ -1,7 +1,7 @@
 import numpy as N
 from numpy.random import randn
-import densities as D
-import _c_densities as DC
+from pyem import densities as D
+from pyem import _c_densities as DC
 import tables
 
 def bench(func, mode = 'diag'):
@@ -10,8 +10,9 @@ def bench(func, mode = 'diag'):
     #===========================================
     d       = 30
     n       = 1e5
-    niter   = 100
+    niter   = 10
 
+    print "Compute %d times densities, %d dimension, %d frames" % (niter, d, n)
     # Generate a model with k components, d dimensions
     mu  = randn(1, d)
     if mode == 'diag':
@@ -21,24 +22,8 @@ def bench(func, mode = 'diag'):
         va  = N.dot(va, va.transpose())
 
     X   = randn(n, d)
-    print "Compute %d times densities, %d dimension, %d frames" % (niter, d, n)
     for i in range(niter):
         Y   = func(X, mu, va)
-    
-    # Check values
-    h5file  = tables.openFile('diag.dat', "r")
-    X   = h5file.root.input.read()
-    mu  = h5file.root.mu.read()
-    va  = h5file.root.va.read()
-    Yt  = h5file.root.output.read()
-    Y   = func(X, mu, va)
-
-    try:
-        N.testing.assert_array_almost_equal(Y, Yt) 
-    except AssertionError:
-        print N.sum(Y)
-        print N.sqrt(N.sum((Y-Yt) **2)) / n
-        raise "Not accurate !!!!"
 
 def benchpy():
     bench(D.gauss_den)
@@ -53,11 +38,17 @@ def benchcfull():
     bench(DC.gauss_den, 'full')
 
 if __name__ == "__main__":
-    import profile
-    import pstats
-    profile.run('benchpy()', 'gdenprof')
-    p = pstats.Stats('gdenprof')
+    import hotshot, hotshot.stats
+    profile_file    = 'gdenpy.prof'
+    prof    = hotshot.Profile(profile_file, lineevents=1)
+    prof.runcall(benchpy)
+    p = hotshot.stats.load(profile_file)
     print p.sort_stats('cumulative').print_stats(20)
-    profile.run('benchc()', 'gdenprof')
-    p = pstats.Stats('gdenprof')
+    prof.close()
+
+    profile_file    = 'gdenc.prof'
+    prof    = hotshot.Profile(profile_file, lineevents=1)
+    prof.runcall(benchc)
+    p = hotshot.stats.load(profile_file)
     print p.sort_stats('cumulative').print_stats(20)
+    prof.close()
